--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
                     android:id="@+id/mobile_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Mobile"
+                    android:hint="Driver ID"
                     android:singleLine="true"
                     android:inputType="phone"
                     android:maxLength="10"
@@ -55,7 +55,7 @@
                     android:id="@+id/password_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="MPIN"
                     android:singleLine="true"
                     android:maxLength="40"
                     android:inputType="textPassword"
