--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -12,8 +12,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
+            android:layout_margin="10dp"
             android:layout_marginBottom="@dimen/marginTop"
             >
 
@@ -27,6 +28,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                android:gravity="center"
+                android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:layout_marginTop="@dimen/marginTop">
@@ -35,6 +44,7 @@
                     android:id="@+id/spinner1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/marginTop"
                     android:entries="@array/Routes"
                     android:prompt="@string/Route_prompt" />
 
@@ -45,21 +55,60 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_left_right"
-                android:layout_marginRight="@dimen/margin_left_right"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/marginTop">
+
+                <Spinner
+                    android:id="@+id/spinner2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:layout_weight="0.9"
+android:entries="@array/Station"
+                    android:prompt="@string/station_prompt" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.2"
+                    android:text=" : "
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:gravity="center_horizontal"
+                    />
+                <Spinner
+                    android:id="@+id/spinner3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:textAlignment="textEnd"
+                    android:layout_weight="0.9"
+                    android:entries="@array/Station"
+                    android:prompt="@string/station_prompt" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
                 android:layout_marginTop="30dp">
 
                 <Button
                     android:id="@+id/submitbtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:layout_marginTop="@dimen/marginTop"
                     android:background="@drawable/button_border"
-                    android:text="Submit"
+                    android:text="Start Trip"
                     android:textColor="@color/bottonText"
                     android:textSize="@dimen/TextSize" />
             </LinearLayout>
-
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
